--- a/Backend/tfg-web-app/package.json
+++ b/Backend/tfg-web-app/package.json
@@ -18,8 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:seed": "ts-node prisma/seed.ts",
-    "fix:assign-users": "DATABASE_URL=file:./prisma/dev.db node scripts/assign-users-to-projects.js"
+    "prisma:seed": "ts-node prisma/seed.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
