--- a/Backend/tfg-web-app/Dockerfile
+++ b/Backend/tfg-web-app/Dockerfile
@@ -26,4 +26,4 @@ RUN npx prisma generate
 COPY --from=build /app/dist ./dist
 
 EXPOSE 4000
-CMD ["sh", "-c", "npx prisma migrate deploy && node dist/main"]
+CMD ["sh", "-c", "npx prisma migrate deploy && node dist/src/main"]
