Change service type from LoadBalancer to NodePort

--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -4,11 +4,10 @@ metadata:
   name: frontend
   namespace: tfg-app
 spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 3000
-    protocol: TCP
-    name: http
+  type: NodePort
   selector:
     app: frontend
+  ports:
+    - port: 80
+      targetPort: 3000
+      protocol: TCP
